package pdp;

option java_package = "de.tum.in.i22.uc.cm.gpb";
option java_outer_classname = "PdpProtos";

message GpBoolean {
	required bool value = 1;
}

message GpString {
	required string value = 1;
}

message GpEvent {
	optional string name = 1;
	optional bool isActual = 2;
	
	message GpMapEntry {
		required string key = 1;
		required string value = 2;
	}
	
	repeated GpMapEntry mapEntry = 3;
	
	optional string timestamp = 4;
}


message GpStatus {
	enum GpEStatus {
		OKAY = 1;
		ERROR = 2;
		INHIBIT = 3;
		ALLOW = 4;
		MODIFY = 5;
		ERROR_EVENT_PARAMETER_MISSING = 6;
	}
	
	required GpEStatus value = 1;
	optional string errorMessage = 2;
}

message GpResponse {
	optional GpStatus authorizationAction = 1;
	repeated GpEvent executeAction = 2;
	optional GpEvent modifiedEvent = 3;
}


message GpData {
	optional string id = 1;
}

message GpDataList {
	repeated GpData dataElement = 1;
}

message GpContainer {
	optional string classValue = 1;
	optional string id = 2;
}

message GpContainerList {
	repeated GpContainer containerElement = 1;
}

message GpOslFormula {
	optional string formula = 1;
}

message GpDataEventMap {
	message GpDataEventMapEntry {
		required GpData key = 1;
		required GpEvent value = 2;	
	}
	
	repeated GpDataEventMapEntry mapEntry = 1;
}

message GpStateEventMap {
	message GpStateEventMapEntry {
		required string key = 1;
		required GpEvent value = 2;
	}
	
	repeated GpStateEventMapEntry mapEntry = 1;
}

message GpSimplifiedTemporalLogic {
	optional GpDataEventMap dataEventMap = 1;
	optional GpOslFormula formula = 2;
	optional GpStateEventMap stateEventMap = 3;
}

message GpCondition {
	optional GpOslFormula condition = 1;
	optional GpSimplifiedTemporalLogic conditionSimp = 2;
}

message GpHistory {
	repeated GpEvent trace = 1;
}

message GpMechanism {
	optional GpCondition condition = 1;
	optional string mechanismName = 2;
	optional GpResponse response = 3;
	optional GpHistory state = 4;
	optional GpEvent triggerEvent = 5;
}

message GpConflictResolutionFlag {
	enum GpEConflictResolution {
		OVERWRITE = 1;
		IGNORE_UPDATES = 2;
		KEEP_ALL = 3;
	}
	
	required GpEConflictResolution value = 1;
}

message GpPipDeployer {
	required string id = 1;
	required string name = 2; 
}

message GpByteArray {
	required bytes byteArray = 1;
}

message GpKey {
	required int32 key = 1;
}

message GpCacheUpdate {
	message GpCacheUpdateEntry{
		required GpKey key = 1;
		required GpBoolean value = 2;
	}
	
	required string scopeID = 1;
	repeated GpCacheUpdateEntry map = 2;

}
	
	
